Improve error handling, add 'create' endpoint
