# api/models.go
@@ -30,3 +30,17 @@ type SecretData struct {
 	Admin    []byte `json:"admin"`
 	Password []byte `json:"password"`
 }
+
+// Secret Request
+// swagger:model secretRequest
+type SecretRequest struct {
+	// required: true
+	// example: my-secret
+	Name string `json:"name"`
+	// required: true
+	// example: app-namespace
+	Namespace string `json:"namespace"`
+	// required: true
+	// example: {"admin": "my-serviceaccount", "password": "start123", ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5...", "certificate": "InBhc3N3b3JkIjoiSWJjdDk0MjAiLCJlbWFpbCI6InNlYmFz..."}
+	Data map[string]string `json:"data"`
+}
